# himg

./: README.md
src/: .clang-format  .gitignore  CMakeLists.txt  Makefile  benchmark.cpp  chimg.cpp  common.h  decoder.cpp  decoder.h  dhimg.cpp  downsampled.cpp  downsampled.h  encoder.cpp  encoder.h  hadamard.cpp  hadamard.h  huffman.cpp  huffman.h  huffman_common.h  huffman_dec.cpp  huffman_dec.h  huffman_enc.cpp  huffman_enc.h  mapper.cpp  mapper.h  quantize.cpp  quantize.h  ycbcr.cpp  ycbcr.h
src/lib/: CMakeLists.txt  common.cpp  decoder.cpp  encoder.h  hadamard.cpp  huffman_dec.cpp  huffman_enc.cpp  mapper.h
